# libs/types/src/dtos/account/wallet.login.config.response.dto.ts
@@ -1,12 +1,0 @@
-import { IsNotEmpty } from 'class-validator';
-
-export class WalletLoginConfigResponseDto {
-  @IsNotEmpty()
-  providerId: string;
-
-  @IsNotEmpty()
-  siwfUrl: string;
-
-  @IsNotEmpty()
-  frequencyRpcUrl: string;
-}
