# openapi-specs/account.openapi.json
@@ -102,58 +102,6 @@
         ]
       }
     },
-    "/v1/accounts/siwf": {
-      "get": {
-        "operationId": "AccountsControllerV1_getSIWFConfig_v1",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "Returned SIWF Configuration data",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/WalletLoginConfigResponseDto"
-                }
-              }
-            }
-          }
-        },
-        "summary": "Get the Sign In With Frequency configuration",
-        "tags": [
-          "v1/accounts"
-        ]
-      },
-      "post": {
-        "operationId": "AccountsControllerV1_postSignInWithFrequency_v1",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/WalletLoginRequestDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Signed in successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/WalletLoginResponseDto"
-                }
-              }
-            }
-          }
-        },
-        "summary": "Request to Sign In With Frequency",
-        "tags": [
-          "v1/accounts"
-        ]
-      }
-    },
     "/v1/accounts/{msaId}": {
       "get": {
         "operationId": "AccountsControllerV1_getAccountForMsa_v1",
@@ -1044,25 +992,6 @@
           "controlKey"
         ]
       },
-      "WalletLoginConfigResponseDto": {
-        "type": "object",
-        "properties": {
-          "providerId": {
-            "type": "string"
-          },
-          "siwfUrl": {
-            "type": "string"
-          },
-          "frequencyRpcUrl": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "providerId",
-          "siwfUrl",
-          "frequencyRpcUrl"
-        ]
-      },
       "HandleResponseDto": {
         "type": "object",
         "properties": {
@@ -1094,126 +1023,6 @@
         },
         "required": [
           "msaId"
-        ]
-      },
-      "SiwsPayloadDto": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string"
-          },
-          "signature": {
-            "type": "string",
-            "description": "Signature of the payload",
-            "example": "0x64f8dd8846ba72cbb1954761ec4b2e44b886abb4b4ef7455b869355f17b4ce4a601ad26eabc57a682244a97bc9a2001b59469ae76fea105b724e988967d4928d"
-          }
-        },
-        "required": [
-          "message",
-          "signature"
-        ]
-      },
-      "ErrorResponseDto": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string",
-            "description": "Error message",
-            "example": "Some error"
-          }
-        },
-        "required": [
-          "message"
-        ]
-      },
-      "SignInResponseDto": {
-        "type": "object",
-        "properties": {
-          "siwsPayload": {
-            "$ref": "#/components/schemas/SiwsPayloadDto"
-          },
-          "error": {
-            "$ref": "#/components/schemas/ErrorResponseDto"
-          }
-        }
-      },
-      "EncodedExtrinsicDto": {
-        "type": "object",
-        "properties": {
-          "pallet": {
-            "type": "string",
-            "minLength": 1
-          },
-          "extrinsicName": {
-            "type": "string",
-            "minLength": 1
-          },
-          "encodedExtrinsic": {
-            "type": "string",
-            "description": "Hex-encoded representation of the extrinsic",
-            "example": "0x00112233"
-          }
-        },
-        "required": [
-          "pallet",
-          "extrinsicName",
-          "encodedExtrinsic"
-        ]
-      },
-      "SignUpResponseDto": {
-        "type": "object",
-        "properties": {
-          "extrinsics": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/EncodedExtrinsicDto"
-            }
-          },
-          "error": {
-            "$ref": "#/components/schemas/ErrorResponseDto"
-          }
-        }
-      },
-      "WalletLoginRequestDto": {
-        "type": "object",
-        "properties": {
-          "signIn": {
-            "description": "The wallet login request information",
-            "example": {
-              "siwsPayload": {
-                "message": "0x1234567890abcdef",
-                "signature": "0x64f8dd8846ba72cbb1954761ec4b2e44b886abb4b4ef7455b869355f17b4ce4a601ad26eabc57a682244a97bc9a2001b59469ae76fea105b724e988967d4928d"
-              },
-              "err": {
-                "message": "Error message"
-              }
-            },
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/SignInResponseDto"
-              }
-            ]
-          },
-          "signUp": {
-            "$ref": "#/components/schemas/SignUpResponseDto"
-          }
-        }
-      },
-      "WalletLoginResponseDto": {
-        "type": "object",
-        "properties": {
-          "referenceId": {
-            "type": "string"
-          },
-          "msaId": {
-            "type": "string"
-          },
-          "publicKey": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "referenceId"
         ]
       },
       "RetireMsaPayloadResponseDto": {
